# algoritmer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: fibonacci.rs  search.rs  sorts.rs
examples/: capitalize.rs  fibonacci_memoized.rs  remove_duplicates.rs  swap_case.rs  word_occurrences.rs
src/: dynamic_programming.rs  lib.rs  macros.rs  math.rs  math_algorithms.rs  search.rs  sorts.rs  strings.rs  strings_algorithms.rs
src/ciphers/: mod.rs  morse_code.rs
src/dynamic_programming/: memoize.rs  mod.rs
src/higher_order_functions/: mod.rs
src/macros/: hashmap.rs  mod.rs
src/math/: abs.rs  calculate_factorial.rs  ceil.rs  factorial.rs  fibonacci.rs  floor.rs  greatest_common_divisor.rs  is_perfect.rs  mod.rs  perfect.rs  power.rs
src/math_algorithms/: fibonacci.rs
src/search/: README.md  binary.rs  binary_search.rs  exponential.rs  fibonacci.rs  jump.rs  jump_search.rs  linear.rs  linear_search.rs  mod.rs  struzik_search.rs  ternary.rs  ternary_search.rs
src/sorts/: README.md  README.org  bead.rs  bead_sort.rs  bitonic.rs  bitonic_sort.rs  bogo.rs  bogo_sort.rs  bogosort.rs  bubble.rs  bubble_sort.rs  bucket.rs  bucket_sort.rs  cocktail_shaker.rs  cocktail_shaker_sort.rs  comb.rs  comb_sort.rs  counting.rs  counting_sort.rs  cycle.rs  gnome.rs  heap.rs  insertion.rs  insertion_sort.rs  merge.rs  merge_sort.rs  mod.rs  quick.rs  quicksort.rs  selection.rs  selection_sort.rs  shell.rs  shell_sort.rs  stooge.rs  wiggle.rs  wiggle_sort.rs
tests/: math_algorithms_test.rs  strings_algorithms_test.rs  strings_test.rs
(+22 files in other folders)
