[package]
name = "algorithms"
version = "0.1.0"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies]
num = "0.4.0"
rand = "0.8.5"

[target.'cfg(not(target_feature = "std"))'.dependencies]
hashbrown = { version = "0.13.1" }

[dev-dependencies]
test-case = "2.0.2"
